--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Mirrys Github Page!</title>
   </head>
   <body>
-    <font face="Courier New">Aloha. Hi. Ciao. Hola. Salut.</font>
+    <font face="Courier New">Aloha. Hi. Ciao. Hola. &hearts;</font>
   </body>
 </html>
